Fixed nav option icon spacing

--- a/public/assignment/css/style.scss
+++ b/public/assignment/css/style.scss
@@ -47,3 +47,7 @@ a:hover {
 .list-group.borderless .list-group-item{
   border: 0 solid #FFF;
 }
+
+.nav-option {
+  padding-left: 10px;
+}
